--- a/.tekton/task-ac-sync.yaml
+++ b/.tekton/task-ac-sync.yaml
@@ -150,7 +150,8 @@ spec:
              echo "after commit " 
              git push --set-upstream origin $localBranchName
              echo "after push origin " 
-             #curl -H "Authorization: token $GIT_TOKEN" https://api.github.com/repos/jojustin/toolchain-sample/pulls -d '{"title":"App Configuration sync - from pipeline","head":"main","base":'"\"$localBranchName\""'}'
+             data='{"title":"App Configuration sync - from pipeline","head":"main","base":'"$localBranchName"'}'
+             curl -H "Authorization: token $GIT_TOKEN" https://api.github.com/repos/jojustin/toolchain-sample/pulls -d $data
              echo "Changes are committed.  PR needs to be approved to proceed."
              exit 1
           fi
