--- a/.tekton/pipeline.yaml
+++ b/.tekton/pipeline.yaml
@@ -27,7 +27,7 @@ spec:
     - name: collection_id
       description: name of the App Configuration collection
   tasks:
-    - name: ac-sync
+    - name: appconfiguration-sync
       taskRef: 
         name: ac-sync-task
       params:
