--- a/.tekton/task-ac-sync.yaml
+++ b/.tekton/task-ac-sync.yaml
@@ -115,7 +115,7 @@ spec:
       command: ["/bin/bash", "-c"]
       args:
         - |
-          set -v -o pipefail;
+          set -x -o pipefail;
           folderName=$(echo ${REPOSITORY##*/})
           cd $folderName
           if [ "$REGION" = "eu-gb" ]; then
@@ -148,8 +148,8 @@ spec:
              git add .
              git commit -m "Sync with app configuration - Triggered from Toolchain"
              git push --set-upstream origin $localBranchName
-             data='{"title":"App Configuration sync - from pipeline","head":"main","base":'"'$localBranchName'"'}'
-             curl -H "Authorization: token $GIT_TOKEN" https://api.github.com/repos/jojustin/toolchain-sample/pulls -d $data
+             #data='{"title":"App Configuration sync - from pipeline","head":"main","base":'"$localBranchName"'}'
+             #curl -H "Authorization: token $GIT_TOKEN" https://api.github.com/repos/jojustin/toolchain-sample/pulls -d $data
              echo "Changes are committed.  PR needs to be approved to proceed."
              exit 1
           fi
