--- a/.tekton/cd_pipeline/listener.yaml
+++ b/.tekton/cd_pipeline/listener.yaml
@@ -14,6 +14,8 @@ spec:
       description: Id of the App Configuration instance
     - name: collection_id
       description: name of the App Configuration collection
+    - name: apikey
+      description: the ibmcloud api key      
     - name: gitToken
       description: git Token to access GITHUB api      
     - name: featureFilePath
@@ -25,6 +27,7 @@ spec:
         name: cd-secret
       type: Opaque
       stringData:
+        API_KEY: $(params.apikey)      
         GIT_TOKEN: $(params.gitToken)
         REGION: ${params.region}
         GUID: ${params.guid}        
@@ -63,6 +66,8 @@ spec:
             value: $(params.region)
           - name: collection_id
             value: $(params.collection_id)
+          - name: apikey
+            value: $(params.apikey)            
           - name: featureFilePath
             value: $(params.featureFilePath)            
         workspaces:
