--- a/.tekton/ci_pipeline/pipeline.yaml
+++ b/.tekton/ci_pipeline/pipeline.yaml
@@ -18,8 +18,8 @@ spec:
       description: url of the built image
     - name: clusterName
       description: The IBM Cloud Kubernetes cluster name
-    - name: featureFilePath
-      description: JSON file path where the App Configuration feature details are stored
+    - name: region
+      description: Region of the App Configuration instance      
   tasks:
     - name: appconfiguration-ci
       taskRef: 
@@ -35,14 +35,8 @@ spec:
           value: $(params.imageUrl)
         - name: apikey
           value: $(params.apikey)
-        - name: guid
-          value: $(params.guid)
         - name: region
           value: $(params.region)
-        - name: collection_id
-          value: $(params.collection_id)
-        - name: featureFilePath
-          value: $(params.featureFilePath)
         - name: clusterName
           value: $(params.clusterName)
         - name: task-pvc
