--- a/.tekton/ci_pipeline/listener.yaml
+++ b/.tekton/ci_pipeline/listener.yaml
@@ -8,6 +8,8 @@ spec:
       description: the git repo
     - name: branch
       description: the branch for the git repo
+    - name: apikey
+      description: the ibmcloud api key
     - name: region
       description: Region of the App Configuration instance
     - name: resourceGroup
@@ -25,6 +27,7 @@ spec:
         name: cd-secret
       type: Opaque
       stringData:
+        API_KEY: $(params.apikey)
         parameters: $(params.parameters)
         GIT_TOKEN: $(params.gitToken)
         REGION: ${params.region}
@@ -58,6 +61,8 @@ spec:
             value: $(params.repository)
           - name: branch
             value: $(params.branch)
+          - name: apikey
+            value: $(params.apikey)
           - name: resourceGroup
             value: $(params.resourceGroup)
           - name: imageUrl
