--- a/.tekton/ci_pipeline/pipeline.yaml
+++ b/.tekton/ci_pipeline/pipeline.yaml
@@ -10,6 +10,8 @@ spec:
       description: the git repo
     - name: branch
       description: the branch for the git repo
+   - name: apikey
+     description: the ibmcloud api key
     - name: resourceGroup
       description: Region of the App Configuration instance
     - name: imageUrl
@@ -31,6 +33,8 @@ spec:
           value: $(params.resourceGroup)
         - name: imageUrl
           value: $(params.imageUrl)
+       - name: apikey
+         value: $(params.apikey)
         - name: region
           value: $(params.region)
         - name: clusterName
