--- a/.tekton/cd_pipeline/pipeline.yaml
+++ b/.tekton/cd_pipeline/pipeline.yaml
@@ -19,7 +19,7 @@ spec:
     - name: collection_id
       description: name of the App Configuration collection
     - name: apikey
-      description: the ibmcloud api key      
+      description: Apikey of the App Configuration instance
   tasks:
     - name: appconfiguration-cd
       taskRef: 
