--- a/.tekton/cd_pipeline/task-appconfig-cd.yaml
+++ b/.tekton/cd_pipeline/task-appconfig-cd.yaml
@@ -111,8 +111,7 @@ spec:
             echo "\$REGION is NOT empty"
             echo "base url is $baseUrl"
             echo "BASEURL is $BASEURL"            
-            replaceStr=".apprapp"
-            subdomain=$REGION$replaceStr
+            subdomain=$REGION.apprapp
             generatedBaseUrl=${BASEURL/apprapp/$subdomain}
             echo "generatedBaseUrl is $generatedBaseUrl"
             if [ "$REGION" = "eu-gb" ]; then
