--- a/.tekton/cd_pipeline/task-appconfig-cd.yaml
+++ b/.tekton/cd_pipeline/task-appconfig-cd.yaml
@@ -48,9 +48,11 @@ spec:
         - |
           set -e;          
           #to do - change this
-          GIT_URL="https://$GIT_TOKEN@github.com/jojustin/toolchain-sample.git"
-          echo "Cloning $GIT_URL"
-          repo_exists=$(git ls-remote $GIT_URL 2>&1 | cut -d':' -f2 | head -1 | awk '{print $1,$2,$3}')
+          replacestr=$GIT_TOKEN@github
+          sampleGitUrl=${GIT_URL/github/$replacestr}
+          #GIT_URL="https://$GIT_TOKEN@github.com/jojustin/toolchain-sample.git"
+          echo "Cloning $sampleGitUrl"
+          repo_exists=$(git ls-remote $sampleGitUrl 2>&1 | cut -d':' -f2 | head -1 | awk '{print $1,$2,$3}')
           if [ "$repo_exists" == "Repository not found." ]; then
             echo "Repo does not exist"
             exit 1
@@ -58,7 +60,7 @@ spec:
             echo "Repo exists"
           fi
           echo $BRANCH
-          git clone -b $BRANCH $GIT_URL
+          git clone -b $BRANCH $sampleGitUrl
 
       volumeMounts:
         - mountPath: /artifacts
