--- a/.tekton/cd_pipeline/task-appconfig-cd.yaml
+++ b/.tekton/cd_pipeline/task-appconfig-cd.yaml
@@ -114,10 +114,9 @@ spec:
           else
             subdomain=$REGION.apprapp
             baseUrl=${BASEURL/apprapp/$subdomain}
-            #only for local testing
-            #baseUrl="https://apprapp-dev-37b89de8caeb649450a9af91731f3589-0000.us-south.containers.appdomain.cloud/apprapp/feature/v1/instances/"
             
             configUrl="${baseUrl}${GUID}/collections/${COLLECTIONID}/config"
+            curl -X GET $configUrl -H 'Authorization: $API_KEY'
             until $(curl -X GET $configUrl -H 'Authorization: $API_KEY'| jq . > featuretemp.json); do
                printf 'waiting...'
                sleep 5
